Css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    color: #fff;
    scroll-behavior: smooth;
    scroll-padding-top: 100px;
}

body {
    width: 100%;
    background-color: #000;
    font-family: "Poppins", sans-serif;
}

header {
    width: 100%;
    height: 100vh;
    position: relative;
}

nav {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    position: fixed;
    z-index: 1000;
    backdrop-filter: blur(4px);
}

nav #Logo {
    width: 5rem;
    height: auto;
    margin-left: 3rem;
    border-radius: 50%;
    box-shadow: 4px 3px 5px #fff;
    transition: 0.4s ease-in-out;
}

nav #Logo:hover {
    transform: scale(1.05);
}


nav #menu {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 35px;
}

nav #menu a {
    font-size: 1.1rem;
    text-shadow: 5px 5px 5px violet;
    transition: 0.3s ease-in-out;
}

nav #menu a:hover {
    text-shadow: 5px 5px 5px rgb(72, 180, 223);
    transform: scale(1.05);
    transform: translateY(-3px);
    border-bottom: 0.1px solid #fff;
}

nav button {
    font-size: 1.3rem;
    margin-right: 3rem;
    background: transparent;
    border: none;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}

nav button:hover {
    color: violet;
}



header #bg {
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    object-fit: cover;
}



header::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 200px;
    background: linear-gradient(to bottom,
            rgba(0, 0, 0, 0),
            #000);
    z-index: 3;
}


#Hero_Section {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 5;
    text-align: center;
}

#Hero_Section h1 {
    font-size: 2.5rem;
    color: #fff;
    font-weight: 600;
    text-shadow: 4px 4px 5px violet;
}

#Hero_Section p {
    font-size: 1.5rem;
    color: #fff;
    text-shadow: 4px 4px 5px rgb(72, 180, 223);
}

#Albums {
    width: 100%;
    height: auto;
    margin-bottom: 80px;
}

#Albums #line {
    border-bottom: 1px solid violet;
    margin-bottom: 3.5rem;
    opacity: 0.4;
}

#Albums .Album-desc {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 15px;
}

#Albums .Album-desc h1 {
    text-shadow: 2px 2px 10px #fff;
}

#Albums .Album-desc #search input {
    color: #000;
    font-weight: 500;
    border-radius: 15px;
    padding: 6px;
}


#Albums .Album-desc #search button {
    font-size: 1rem;
    background: transparent;
    cursor: pointer;
    padding: 5px;
    border: none;
}

#Albums .Album_Align {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    place-items: center;
}

#Albums .Album_Align .Extra_Album {
    display: none;
}

#Albums .Album_Align .Extra_Album.show {
    display: block;
}

#Albums .Album-card {
    width: 350px;
    height: auto;
    padding-bottom: 15px;
    margin-bottom: 35px;
    border: 2px solid violet;
    box-shadow: 5px 5px 8px violet;
    border-radius: 15px;
    transition: 0.2s ease-in-out;
}

#Albums .Album-card:hover {
    transform: scale(1.01);
    border: 2px solid rgb(72, 180, 223);
    box-shadow: 3px 5px 10px rgb(72, 180, 223);

}

#Albums .Album-card .Album_image {
    display: flex;
    justify-content: center;
    align-items: center;
}

#Albums .Album-card .Album_image img {
    width: 320px;
    height: 320px;
    object-fit: cover;
    margin-top: 10px;
    border-radius: 10px;
}

#Albums .Album-card .Album_text {
    display: flex;
    flex-direction: column;
    gap: 3px;
    padding: 10px 25px;
}

#Albums .Album-card .Album_text h2 {
    color: violet;
}

#Albums .Album-card:nth-child(4) .Album_text h2 {
    word-spacing: 0px;
    font-size: 1.1rem;
}

#Albums .Album-card .Album_text button {
    font-size: 1rem;
    padding: 13px;
    border-radius: 30px;
    background: linear-gradient(to right, violet, rgb(72, 180, 223));
    cursor: pointer;
    font-weight: 500;
    border: none;
    transition: 0.3s ease-in-out;
    margin-top: 15px;
}

#Albums .Album-card .Album_text button:hover {
    box-shadow: 2px 2px 15px #288cc5;
    background: linear-gradient(to left, violet, rgb(72, 180, 223));
}

#Albums #btn-aln {
    text-align: center;
}

#Albums #btn-aln button {
    font-size: 1.2rem;
    font-weight: 600;
    text-shadow: 1px 1px 1px #fff;
    padding-inline: 20px;
    padding-block: 15px;
    border-radius: 30px;
    cursor: pointer;
    border: none;
    box-shadow: 1px 5px 15px rgb(72, 180, 223);
    background: #000;
    transition: 0.3s ease-in-out;
}

#Albums #btn-aln button:hover {
    color: #000;
    background: #fff;
    box-shadow: 1px 5px 10px violet;
}

#Magazines {
    width: 100%;
    height: auto;
    margin-bottom: 50px;
}

#Magazines #line {
    border-bottom: 1px solid rgb(72, 180, 223);
    margin-bottom: 3.5rem;
    opacity: 0.4;
}

#Magazines .Magazine-desc {
    display: flex;
    justify-content: space-between;
    align-items: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 15px;
}

#Magazines .Magazine-desc h1 {
    text-shadow: 1px 2px 10px #fff;
}

#Magazines .Magazine-desc #search input {
    color: #000;
    font-weight: 500;
    border-radius: 15px;
    padding: 6px;
}

#Magazines .Magazine-desc #search button {
    font-size: 1rem;
    background: transparent;
    cursor: pointer;
    padding: 5px;
    border: none;
}

#Magazines .magazine-align {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
/* ... */

